<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/llRate"
        android:background="#ffffff"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/title_txt_color"
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/rate"
            android:fontFamily="@font/inter_bold"/>

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:padding="10dp"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_45sdp"
                android:src="@drawable/ic_star_fill"/>

            <ImageView
                android:padding="10dp"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_45sdp"
                android:src="@drawable/ic_star_fill"/>

            <ImageView
                android:padding="10dp"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_45sdp"
                android:src="@drawable/ic_star_fill"/>

            <ImageView
                android:padding="10dp"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_45sdp"
                android:src="@drawable/ic_star_half_stroke"/>

            <ImageView
                android:padding="10dp"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_45sdp"
                android:src="@drawable/ic_star"/>

        </LinearLayout>

        <TextView
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/title_txt_color"
            android:gravity="center"
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/rate_msg"
            android:fontFamily="@font/inter_medium"/>

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:weightSum="2">

            <TextView
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:gravity="center"
                android:id="@+id/btn_letter"
                android:background="@drawable/btn_calculate"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letter"
                android:includeFontPadding="false"
                android:fontFamily="@font/inter_bold"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"/>

            <TextView
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:gravity="center"
                android:id="@+id/btn_rate_now"
                android:background="@drawable/btn_clearall"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_now"
                android:includeFontPadding="false"
                android:fontFamily="@font/inter_bold"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
